# CafeManagerMicroServices

./: .gitignore  docker-compose.yml
auth_service/: Dockerfile
auth_service/auth_service/: api.py  settings.py  urls.py
auth_service/authx/: authentication.py  models.py  urls.py  views.py  viewsets.py
django_cm_ms_auth/: LICENSE  README.rst  setup.cfg
django_cm_ms_auth/authx/: admin.py  authentication.py  dbrouter.py  jwt.py  middleware.py  models.py  permissions.py  urls.py  views.py
django_cm_ms_auth/django_cm_ms_auth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
menu_service/menu_service/: settings.py
purchase_service/: requirements.txt
purchase_service/purchase/: serializers.py
purchase_service/purchase_service/: settings.py
store_service/store/: models.py  serializers.py  urls.py  viewsets.py
store_service/store_service/: api.py  asgi.py  settings.py  urls.py  wsgi.py
supplier_service/: Dockerfile
supplier_service/supplier/: viewsets.py
supplier_service/supplier_service/: settings.py  urls.py
