[metadata]
name = django_cm_ms_auth
version = 0.1
description = Django CafeManager MicroServices Auth
long_descripton = file: README.rst
url = https://www.linkedin.com/in/maciejstys/
author = Maciej Styś

license = MIT license
classifiers = 
    Envronment :: Web Development
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python 3
    Programming Language :: Python 3.9
    Topic :: Internet :: WWW/HTTP

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires = 
    Django >= 3.2
    django-cors-headers >= 3.13
    djangorestframework >= 3.14
    requests >= 2.28
